Add feature flags for both futures::Future and std::future::Future

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,14 @@ authors = ["Max Bruckner <max@maxbruckner.de>"]
 edition = "2018"
 
 [dependencies]
-futures = "0.1"
 either = "1.5"
+futures = {version = "0.1", optional = true}
 
 [dev-dependencies]
 tokio01 = { package = "tokio", version = "0.1" }
-tokio02 = { package = "tokio", version = "0.2.0-alpha" }
+tokio02 = { package = "tokio", version = "0.2.0-alpha"}
+
+[features]
+default = ["std_future", "futures_future"]
+std_future = []
+futures_future = ["futures"]
