Make the library no_std

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 license = "ISC"
 homepage = "https://github.com/FSMaxB/rust-either-future"
 repository = "https://github.com/FSMaxB/rust-either-future"
-keywords = ["future", "either"]
+keywords = ["future", "either", "no_std"]
 description = "An implementation of Future for Either<impl Future, impl Future>."
 readme = "README.md"
 
