--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ keywords = ["future", "either", "no_std"]
 description = "An implementation of Future for Either<impl Future, impl Future>."
 readme = "README.md"
 
+[package.metadata.docs.rs]
+all-features = true
+
 [dependencies]
 either = "1"
 futures = {version = "0.1", optional = true, default-features = false}
