--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,10 @@
 on:
   push: {}
+  pull_request:
+    branches:
+    - main
+
+
   schedule:
     - cron: '42 7 * * Tue'  # Run every tuesday at 7:42
 env:
@@ -12,11 +17,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
       - name: Install rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
-          default: true
-          components: clippy, rustfmt
+            components: clippy, rustfmt
       - name: Check formatting
         run: cargo fmt --all -- --check
       - name: Clippy
@@ -28,52 +31,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
       - name: Install rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          default: true
-          profile: minimal
+        uses: dtolnay/rust-toolchain@stable
       - name: Test
-        run: cargo test --all-features
-  test_futures01:
-    name: Test with futures 0.1
+        run: cargo test
+  test_msrv:
+    name: Test with MSRV
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v5
-      - name: Install MSRV for futures 0.1
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: 1.15.0 # current MSRV for futures 0.1, see https://github.com/rust-lang/futures-rs/blob/0.1/.github/workflows/ci.yml
-          default: true
-          profile: minimal
+      - name: Install MSRV
+        uses: dtolnay/rust-toolchain@1.41 # Relaxed orphan rule restrictions
       - name: Test
-        run: cargo test --no-default-features --features futures01
-  test_futures03:
-    name: Test with futures 0.3
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-      - name: Install MSRV for futures 0.3
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: 1.41.0 # current MSRV for futures_util 0.3, see https://github.com/rust-lang/futures-rs/blob/0.3/.github/workflows/ci.yml
-          default: true
-          profile: minimal
-      - name: Test
-        run: cargo test --no-default-features --features futures03
-  test_std_future:
-    name: Test with core::future::Future
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-      - name: Install MSRV for core::future::Future
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: 1.36.0 # The standard future type was introduced in 1.36.0
-          default: true
-          profile: minimal
-      - name: Test
-        run: cargo test --no-default-features --features std_future
+        run: cargo test
